// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterTextDetection /> should clear a text detection 1`] = `
.emotion-5 {
  padding: 16px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #e0e0e0;
  background-color: #2e2e2e;
  font-weight: 400;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-1:hover {
  background-color: #3b3b3b;
}

.emotion-0 {
  padding-left: 1px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 42px;
  padding: 12px;
  background-color: #191919;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover svg {
  color: #ffffff;
}

.emotion-2 {
  color: #808080;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <button
      aria-label="Edit Text Detection"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <span
        className="emotion-0"
      >
        cats
      </span>
    </button>
    <button
      aria-label="Clear Text Detection"
      className="emotion-3"
      onClick={[Function]}
      title="Clear"
      type="button"
    >
      <svg
        className="emotion-2"
        data-file-name="cross.svg"
        width={20}
      />
    </button>
  </div>
</div>
`;

exports[`<FilterTextDetection /> should edit a text detection 1`] = `
.emotion-4 {
  padding: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
  position: relative;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid transparent;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #2e2e2e;
  padding-left: 12px;
}

.emotion-0:focus {
  color: #191919;
  background-color: #ffffff;
  outline: 0;
  border: 1px solid #73b61c;
}

.emotion-0:focus:hover {
  border: 1px solid #73b61c;
}

.emotion-0:hover {
  border: 1px solid #808080;
}

.emotion-0::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  font-style: italic;
}

.emotion-0::placeholder {
  font-style: italic;
}

.emotion-1 {
  color: #ffffff;
}

.emotion-2 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #ffffff;
  background-color: #73b61c;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: pointer;
}

<form
  action=""
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <input
        className="emotion-0"
        onChange={[Function]}
        placeholder="Search text"
        type="search"
        value={
          Array [
            "cats",
          ]
        }
      />
      <button
        aria-disabled={false}
        aria-label="Search"
        className="emotion-2"
        onClick={[Function]}
        type="submit"
      >
        <svg
          className="emotion-1"
          data-file-name="search.svg"
          width={20}
        />
      </button>
    </div>
  </div>
</form>
`;

exports[`<FilterTextDetection /> should select a facet 1`] = `
.emotion-4 {
  padding: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 42px;
  position: relative;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid transparent;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #2e2e2e;
  padding-left: 12px;
}

.emotion-0:focus {
  color: #191919;
  background-color: #ffffff;
  outline: 0;
  border: 1px solid #73b61c;
}

.emotion-0:focus:hover {
  border: 1px solid #73b61c;
}

.emotion-0:hover {
  border: 1px solid #808080;
}

.emotion-0::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  font-style: italic;
}

.emotion-0::placeholder {
  font-style: italic;
}

.emotion-2 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

.emotion-1 {
  color: #ffffff;
}

<form
  action=""
  method="post"
  onSubmit={[Function]}
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <input
        className="emotion-0"
        onChange={[Function]}
        placeholder="Search text"
        type="search"
        value=""
      />
      <button
        aria-disabled={true}
        aria-label="Search"
        className="emotion-2"
        onClick={[Function]}
        type="submit"
      >
        <svg
          className="emotion-1"
          data-file-name="search.svg"
          width={20}
        />
      </button>
    </div>
  </div>
</form>
`;
